--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-icons": "^3.0.0",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.2",
     "@types/sass": "^1.43.1",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
