--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-paginate": "^7.1.1",
+    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.2",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "@types/sass": "^1.43.1",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "sass": "^1.47.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
